Modifiquei algumas coisas
Dei uma melhorada visualmente

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site em repósitorio</title>
-   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
     <h1>Olá, Mundo!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, provident facere, nemo natus cumque impedit libero ipsum, quod possimus hic corporis distinctio illo iure expedita inventore exercitationem omnis harum quae?</p>
-    
+    <h2>Meu primeiro site postado no repositorio online não tem muita coisa mais espero que gostem</h2>
+    <h3>Queria colocar o que aprende até agora espero melhorar cada dia mais</h3>
+    <p>Queria deixar um pouco mais descontraido o site e bonito visualmente</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis id accusamus molestias repudiandae quam non. Laudantium vero ipsam adipisci ea labore nulla explicabo voluptates. Ab vero molestiae quibusdam laborum? Dignissimos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione itaque quas distinctio consequatur, sit asperiores, vitae veniam alias aliquam a amet fugit praesentium dolore odio dicta repudiandae modi neque maxime.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed sit ea esse impedit porro velit, sunt, asperiores totam ullam, temporibus minus. Voluptates tempore, perspiciatis dolorum suscipit provident facere quisquam nisi!</p>
+</main>
 </body>
 </html>
